--- a/Mileston-01/practice/portfolio_side/style/services.css
+++ b/Mileston-01/practice/portfolio_side/style/services.css
@@ -1,14 +1,14 @@
 .services_page{
     margin-top: 70px;
     width: 100%;
-    /* height: 400px; */
     padding-left: 80px;
     padding-right: 80px;
+    padding-bottom: 80px;
     background-color:#f8f9fa;
+
 
 }
 .services_head{
-    /* background-color: #0f68c0; */
     text-align: center;
     padding-top: 60px;
     padding-bottom: 30px;
