--- a/Mileston-01/practice/portfolio_side/style/style.css
+++ b/Mileston-01/practice/portfolio_side/style/style.css
@@ -6,7 +6,7 @@
 .nav{
     width: 100%;
     color: rgb(3, 43, 43);
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     padding: 15px 80px;
     
 
